# CMake-OpenCV-from-sources

./: CMakeLists.txt  LICENSE  README.md
example-app/: CMakeLists.txt  app.cpp
opencv/: CMakeLists.txt
opencv/cmake/: build_external_project.cmake
